# algo2018

./: .gitignore  CMakeLists.txt
LinearDataStructures/: brackets.cpp  competition.cpp  min.cpp  postfix.cpp  queue.cpp  saloon.cpp  starWars.cpp  trucks.cpp
