cmake_minimum_required(VERSION 3.12)
project(algo2018)

set(CMAKE_CXX_STANDARD 11)

add_executable(algo2018 LinearDataStructures/competition.cpp LinearDataStructures/trucks.cpp LinearDataStructures/postfix.cpp LinearDataStructures/brackets.cpp LinearDataStructures/starWars.cpp LinearDataStructures/queue.cpp)
